PortalPackage/ Enrollment Rx Core/objects/Marketing_Initiatives__c.object
<CustomObject>
    <description>ERx Custom Object - Marketing</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>ERx Custom Field</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Actual_Cost__c</fullName>
        <description>ERx Custom Field</description>
        <label>Actual Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Attended_Yes__c</fullName>
        <label>Attended Yes</label>
        <summaryFilterItems>
            <field>Initiative_Members__c.Event_Attended__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </summaryFilterItems>
        <summaryForeignKey>Initiative_Members__c.Marketing_Initiative__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Budgetted_Cost__c</fullName>
        <description>ERx Custom Field</description>
        <label>Budgeted Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Campaign_Description__c</fullName>
        <description>ERx Field</description>
        <label>Campaign Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Campaign_Status__c</fullName>
        <description>ERx Custom Field</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Planned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aborted</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Did_Not_Attend__c</fullName>
        <label>Did Not Attend</label>
        <summaryFilterItems>
            <field>Initiative_Members__c.Event_Attended__c</field>
            <operation>equals</operation>
            <value>No</value>
        </summaryFilterItems>
        <summaryForeignKey>Initiative_Members__c.Marketing_Initiative__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>ERx Custom Field</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expected_Response__c</fullName>
        <description>ERx Custom Field</description>
        <label>Expected Response</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Expected_Revenue__c</fullName>
        <description>ERx Custom Field</description>
        <label>Expected Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Initiative_Type__c</fullName>
        <description>ERx Field</description>
        <label>Initiative Type</label>
        <picklist>
            <picklistValues>
                <fullName>Radio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Print</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T.V.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open House</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mailer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Student Orientation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Campus Tour</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RSVP_No__c</fullName>
        <label>RSVP No</label>
        <summaryFilterItems>
            <field>Initiative_Members__c.Event_RSVP__c</field>
            <operation>equals</operation>
            <value>No</value>
        </summaryFilterItems>
        <summaryForeignKey>Initiative_Members__c.Marketing_Initiative__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>RSVP_Yes__c</fullName>
        <label>RSVP Yes</label>
        <summaryFilterItems>
            <field>Initiative_Members__c.Event_RSVP__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </summaryFilterItems>
        <summaryForeignKey>Initiative_Members__c.Marketing_Initiative__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>ERx Custom Field</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_Invited__c</fullName>
        <label>Total Invited</label>
        <summaryFilterItems>
            <field>Initiative_Members__c.Invitation_Status__c</field>
            <operation>equals</operation>
            <value>Sent, Responded, Declined</value>
        </summaryFilterItems>
        <summaryForeignKey>Initiative_Members__c.Marketing_Initiative__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Marketing Initiative</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Marketing_Initiatives</fullName>
        <columns>NAME</columns>
        <columns>Initiative_Type__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Total_Invited__c</columns>
        <columns>RSVP_Yes__c</columns>
        <columns>Attended_Yes__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Marketing Initiatives</label>
    </listViews>
    <nameField>
        <label>Marketing Initiative Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Marketing Initiatives</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>